--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         >
           <img
             class="w-60 h-60 sm:w-72 sm:h-72 rounded-full custom-shadow"
-            src="./assets/image/logo.jpg"
+            src="src/assets/image/logo.jpg"
             alt=""
           />
 
@@ -145,7 +145,7 @@
               >
                 <img
                   class="w-20 h-20 object-center animate-rotate-img anim-8s"
-                  src="./assets/image/food/pizza.png"
+                  src="src/assets/image/food/pizza.png"
                   alt="pizza"
                 />
               </div>
@@ -155,7 +155,7 @@
               >
                 <img
                   class="w-20 h-20 object-center animate-rotate-img anim-8s"
-                  src="./assets/image/food/pancake.png"
+                  src="src/assets/image/food/pancake.png"
                   alt="pizza"
                 />
               </div>
@@ -170,7 +170,7 @@
               >
                 <img
                   class="w-20 h-20 object-center animate-rotate-img anim-8s"
-                  src="./assets/image/food/hot_dog.png"
+                  src="src/assets/image/food/hot_dog.png"
                   alt="pizza"
                 />
               </div>
@@ -180,7 +180,7 @@
               >
                 <img
                   class="w-20 h-20 object-center animate-rotate-img anim-8s"
-                  src="./assets/image/food/Custard.png"
+                  src="src/assets/image/food/Custard.png"
                   alt="pizza"
                 />
               </div>
@@ -199,7 +199,7 @@
               >
                 <img
                   class="w-20 h-20 object-center animate-rotate"
-                  src="./assets/image/food/Leafy_Green.png"
+                  src="src/assets/image/food/Leafy_Green.png"
                   alt=""
                 />
               </div>
@@ -209,7 +209,7 @@
               >
                 <img
                   class="w-20 h-20 object-center animate-rotate-img"
-                  src="./assets/image/food/Cupcake.png"
+                  src="src/assets/image/food/Cupcake.png"
                   alt=""
                 />
               </div>
@@ -223,7 +223,7 @@
               >
                 <img
                   class="w-20 h-20 object-center animate-rotate-img"
-                  src="./assets/image/food/hot_dog.png"
+                  src="src/assets/image/food/hot_dog.png"
                   alt=""
                 />
               </div>
@@ -233,7 +233,7 @@
               >
                 <img
                   class="w-20 h-20 object-center animate-rotate-img"
-                  src="./assets/image/food/Custard.png"
+                  src="src/assets/image/food/Custard.png"
                   alt=""
                 />
               </div>
@@ -393,6 +393,6 @@
     </a>
     <!-- Scroll to top btn -->
 
-    <script src="./index.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
